trunk/Archive2/88/59ab6743a8dcaf/output
main.cpp:20:5: error: stray '\342' in program
     /home/tom/Opendungeons/opendungeons/source/ChannelDebug.h:33:6: error: use of deleted function ‘CullingManager::newBashAndSplashTiles(int64_t)::__lambda0::<lambda>()’
     ^
main.cpp:20:5: error: stray '\200' in program
main.cpp:20:5: error: stray '\230' in program
main.cpp:20:5: error: stray '\342' in program
main.cpp:20:5: error: stray '\200' in program
main.cpp:20:5: error: stray '\231' in program
main.cpp:1:37: error: variable or field 'log' declared void
     template< typename F > void log(ChannelColors destinationChannel, F message_creator)
                                     ^
main.cpp:1:37: error: 'ChannelColors' was not declared in this scope
main.cpp:1:73: error: expected primary-expression before 'message_creator'
     template< typename F > void log(ChannelColors destinationChannel, F message_creator)
                                                                         ^
main.cpp:13:5: error: 'ChannelDebug' does not name a type
     ChannelDebug::getSingletonPtr()->log(ChannelColors::blue, [&](){ std::stringstream ss; 
     ^
main.cpp:15:23: error: expected unqualified-id before ')' token
     return ss.str(); });
                       ^
main.cpp:19:5: error: expected unqualified-id before '/' token
     /home/tom/Opendungeons/opendungeons/source/CullingManager.cpp:266:287:   required from here
     ^
